ast/src/snapshots/ast__parser__tests__enum_snapshots@extra_comma.snap
---
source: ast/src/parser.rs
expression: "parse_err(\"enum Foo { Bar, Baz, }\")"
---
ExpectedIdentifier {
    source: NamedSource {
        name: "<test>",
        content: "enum Foo { Bar, Baz, }",
    },
    range: 21..22,
}
