ast/src/snapshots/ast__parser__tests__enum_snapshots@missing_comma.snap
---
source: ast/src/parser.rs
expression: "parse_err(\"enum Foo { Bar Baz }\")"
---
UnexpectedToken {
    source: NamedSource {
        name: "<test>",
        content: "enum Foo { Bar Baz }",
    },
    range: 15..18,
    expected: ,,
    actual: identifier,
}
