ast/src/snapshots/ast__parser__tests__enum_snapshots@multiple_variants.snap
---
source: ast/src/parser.rs
expression: "parse(\"enum Foo { Bar, Baz }\")"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        5..8,
                    ),
                },
                cases: [
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Bar",
                            location: Location(
                                11..14,
                            ),
                        },
                        parameters: [],
                        location: Location(
                            11..14,
                        ),
                    },
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Baz",
                            location: Location(
                                16..19,
                            ),
                        },
                        parameters: [],
                        location: Location(
                            16..19,
                        ),
                    },
                ],
                location: Location(
                    0..21,
                ),
            },
        ),
    ),
]
