ast/src/snapshots/ast__parser__tests__function_definition_snapshots@empty.snap
---
source: ast/src/parser.rs
expression: "parse(\"fn main() -> void {}\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [],
                location: Location(
                    18..20,
                ),
            },
            location: Location(
                0..20,
            ),
        },
    ),
]
