ast/src/snapshots/ast__parser__tests__function_definition_snapshots@external.snap
---
source: ast/src/parser.rs
expression: "parse(\"fn external main() -> void\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: true,
            name: Identifier {
                name: "main",
                location: Location(
                    12..16,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        22..26,
                    ),
                },
            ),
            block: Block {
                statements: [],
                location: Location(
                    26..26,
                ),
            },
            location: Location(
                0..26,
            ),
        },
    ),
]
