ast/src/snapshots/ast__parser__tests__function_definition_snapshots@no_return_type.snap
---
source: ast/src/parser.rs
expression: "parse_err(\"fn main() {}\")"
---
UnexpectedToken {
    source: NamedSource {
        name: "<test>",
        content: "fn main() {}",
    },
    range: 10..11,
    expected: ->,
    actual: {,
}
